solved css issues and layout problems

--- a/app/assets/stylesheets/components/_service-type-card.scss
+++ b/app/assets/stylesheets/components/_service-type-card.scss
@@ -30,6 +30,9 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  .list {
+    width: 100%;
+  }
 }
 
 .accordion-card .accordion-card-header {
