--- a/app/assets/stylesheets/components/_service_show_card.scss
+++ b/app/assets/stylesheets/components/_service_show_card.scss
@@ -1,4 +1,4 @@
-.show-galley {
+.show-gallery {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(2, 1fr);
